
2009-01-19
Initial Project in ajcodekatas
IObject, IBehavior
BaseObject, BaseBehavior
IMethod
Tests for BaseObject, BaseBehavior
MockMethod

2009-01-20
BaseBehavior as vtable of vtable
Behavior as vtable
BaseAddMethodMethod
BaseLookupMethod
Behavior tests

2009-01-22
Major refactor
Behavior was dropped
IBehavior was dropped
BaseBehavior as vtable of vtable
Machine with initial Object and Behavior
Send now sends lookup to Behavior